--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>Welcome to my page!</head>
-  <body>It is nice to meet you.</body>
+  <h1>Destress with Bad Dad Jokes!</h1> 
+  
+  <p>Why didn't the skeleton cross the road?
+    <br>He had no guts.
+  </p>
+
+  <p>Why don't scientists trust atoms?
+    <br>They make up everything.
+  </p>
+  
+  <p>What do you get from a pampered cow?
+    <br>Spoiled milk.
+  </p>
 </html>
