--- a/index.html
+++ b/index.html
@@ -14,3 +14,12 @@
     <br>Spoiled milk.
   </p>
 </html>
+
+<css>
+  body {
+  font-family: serif;
+  background: #301142;
+  color: white;
+  text-align: center;
+}
+</css>
