--- a/index.html
+++ b/index.html
@@ -15,3 +15,12 @@
   </p>
 </html>
 
+
+<style>
+  body {
+  font-family: serif;
+  background: #301142;
+  color: white;
+  text-align: center;
+}
+</style>
